# coq-tracer-api

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
coq_tracer_api/: __init__.py  tracer_types.py
coq_tracer_api_examples/convert/: __main__.py
coq_tracer_api_examples/generate_dataset/: __main__.py
