[tool.poetry]
name = "coq-tracer-api"
version = "0.1.0"
description = "API for interacting with the Coq tracer"
authors = ["Anton Danilkin"]
readme = "README.md"
packages = [
    { include = "coq_tracer_api" },
    { include = "coq_tracer_api_examples" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
zstd = "^1.5.5.1"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.358"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["**/__pycache__", ".venv", "old"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 160
